// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ModalPicker ui default 1`] = `
<div
  style="position: relative; z-index: 1050; display: block;"
  tabindex="-1"
>
  <div
    class=""
  >
    <div
      aria-modal="true"
      class="modal fade"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Please select your favorite color
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="search-input"
            >
              <div
                class="mb-3 input-group"
              >
                <span
                  class="input-group-text"
                >
                  <i
                    class="icon material-icons material-icons__filled"
                  >
                    search
                  </i>
                </span>
                <input
                  aria-label="Start typing to search"
                  class="form-control"
                  id="1"
                  placeholder="Search..."
                  type="search"
                  value=""
                />
              </div>
            </div>
            <h1>
              Children
            </h1>
          </div>
          <div
            class="d-flex justify-content-center modal-footer"
          >
            <div
              class="d-flex justify-content-center flex-wrap flex-sm-nowrap"
            >
              <nav
                aria-label="pagination"
                class=""
              >
                <ul
                  class="pagination"
                >
                  <li
                    class="page-item"
                  >
                    <button
                      class="page-link"
                    >
                      <i
                        class="icon material-icons material-icons__filled"
                        style="font-size: 14px;"
                      >
                        arrow_back
                      </i>
                    </button>
                  </li>
                  <li
                    class="page-item"
                  >
                    <button
                      class="page-link"
                      type="button"
                    >
                      1
                    </button>
                  </li>
                  <li
                    class="page-item active"
                  >
                    <button
                      class="page-link"
                      type="button"
                    >
                      2
                    </button>
                  </li>
                  <li
                    class="page-item"
                  >
                    <button
                      class="page-link"
                      type="button"
                    >
                      3
                    </button>
                  </li>
                  <li
                    class="page-item"
                  >
                    <button
                      class="page-link"
                      type="button"
                    >
                      <i
                        class="icon material-icons material-icons__filled"
                        style="font-size: 14px;"
                      >
                        arrow_forward
                      </i>
                    </button>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            class="d-flex flex-row justify-content-between modal-footer"
          >
            <div />
            <div>
              <button
                class="ms-1 btn btn-secondary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="ms-1 btn btn-primary"
                type="button"
              >
                Select
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade"
    />
  </div>
</div>
`;

exports[`Component: ModalPicker ui loading 1`] = `
<div
  style="position: relative; z-index: 1050; display: block;"
  tabindex="-1"
>
  <div
    class=""
  >
    <div
      aria-modal="true"
      class="modal fade"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Please select your favorite color
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="search-input"
            >
              <div
                class="mb-3 input-group"
              >
                <span
                  class="input-group-text"
                >
                  <i
                    class="icon material-icons material-icons__filled"
                  >
                    search
                  </i>
                </span>
                <input
                  aria-label="Start typing to search"
                  class="form-control"
                  id="5"
                  placeholder="Search..."
                  type="search"
                  value=""
                />
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="content-state loading"
              >
                <div
                  class="state-icons"
                >
                  <i
                    class="icon material-icons material-icons__filled"
                  >
                    add
                  </i>
                  <i
                    class="icon material-icons material-icons__filled"
                  >
                    contrast
                  </i>
                  <i
                    class="icon material-icons material-icons__filled"
                  >
                    photo
                  </i>
                  <i
                    class="icon material-icons material-icons__filled"
                  >
                    folder_open
                  </i>
                  <i
                    class="icon material-icons material-icons__filled"
                  >
                    radio_button_unchecked
                  </i>
                  <i
                    class="icon material-icons material-icons__filled"
                  >
                    bolt
                  </i>
                </div>
                <div
                  class="state-content"
                >
                  <svg
                    class="spinner mb-2"
                    height="75"
                    viewBox="25 25 50 50"
                    width="75"
                  >
                    <circle
                      class="path"
                      cx="50"
                      cy="50"
                      fill="none"
                      r="20"
                      stroke="#f0ad4e"
                      stroke-miterlimit="10"
                      stroke-width="4"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="d-block fs-4"
              />
            </div>
          </div>
          <div
            class="d-flex justify-content-center modal-footer"
          >
            <div
              class="d-flex justify-content-center flex-wrap flex-sm-nowrap"
            >
              <nav
                aria-label="pagination"
                class=""
              >
                <ul
                  class="pagination"
                >
                  <li
                    class="page-item"
                  >
                    <button
                      class="page-link"
                    >
                      <i
                        class="icon material-icons material-icons__filled"
                        style="font-size: 14px;"
                      >
                        arrow_back
                      </i>
                    </button>
                  </li>
                  <li
                    class="page-item"
                  >
                    <button
                      class="page-link"
                      type="button"
                    >
                      1
                    </button>
                  </li>
                  <li
                    class="page-item active"
                  >
                    <button
                      class="page-link"
                      type="button"
                    >
                      2
                    </button>
                  </li>
                  <li
                    class="page-item"
                  >
                    <button
                      class="page-link"
                      type="button"
                    >
                      3
                    </button>
                  </li>
                  <li
                    class="page-item"
                  >
                    <button
                      class="page-link"
                      type="button"
                    >
                      <i
                        class="icon material-icons material-icons__filled"
                        style="font-size: 14px;"
                      >
                        arrow_forward
                      </i>
                    </button>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            class="d-flex flex-row justify-content-between modal-footer"
          >
            <div />
            <div>
              <button
                class="ms-1 btn btn-secondary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="ms-1 btn btn-primary"
                type="button"
              >
                Select
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade"
    />
  </div>
</div>
`;
